fixed build issues in android,updated notifications and favorites fixed map ui, added map api key in android

--- a/ios/Aiou/Info.plist
+++ b/ios/Aiou/Info.plist
@@ -12,6 +12,8 @@
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Podiumapp requires access to your location to provide personalized content and enhance your experience while using the app.</string>
 	<key>CFBundleName</key>
 	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
